Fixed two bugs related to image box form widget appearance

Forms

*Fixed bug: Image box does not store image pasted to it in design time
BUG:289545

*Fixed bug: Changing Horizontal Alignment in image box has no effect
 unless user resizes it or reopens the form
BUG:289544